# Rush-Hour-Solver

./: .gitignore  CMakeLists.txt  README.md  levelHandler.c  main.c  solv.c
includes/: levelHandler.h  solv.h  solvTest.h
src/: levelHandler.c  main.c  solv.c  test_solv.c
