cmake_minimum_required(VERSION 2.6)
project(RushHourSolver)
add_definitions(-std=c99 -Wall -O3)
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin )
set( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib )
set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib )
include_directories(includes)
add_library(game libgame/piece.c libgame/game.c)
add_executable(solver src/main.c src/solv.c src/levelHandler.c)
add_executable(test_solv src/test_solv.c src/solv.c)
target_link_libraries(solver game)
target_link_libraries(test_solv game)
add_test(test-solv bin/test_solv)

