cmake_minimum_required(VERSION 2.6)
project(RushHourSolver)
enable_testing()
add_definitions(-g -std=c99 -Wall)
option(Coverage "Coverage" OFF)
if(Coverage)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fprofile-arcs -ftest-coverage")
set(CMAKE_EXE_LINKER_FLAGS
    "${CMAKE_EXE_LINKER_FLAGS} -fprofile-arcs -ftest-coverage")

set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeModules)
if(CMAKE_COMPILER_IS_GNUCXX)
    include(CodeCoverage)
    setup_target_for_coverage(${PROJECT_NAME}_coverage ctest coverage)
endif()
endif()
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin )
set( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib )
set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib )
include_directories(includes)
add_library(game libgame/piece.c libgame/game.c)
add_executable(solver src/main.c src/solv.c src/levelHandler.c)
add_executable(test_solv src/test_solv.c src/solv.c)
target_link_libraries(solver game)
target_link_libraries(test_solv game)
add_test(test-solv bin/test_solv)

